Fix scrollbars in Chrome

--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     background: #fff;
     color: #444;
